--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ contourpy==1.2.0
 cycler==0.12.1
 Flask==3.0.0
 fonttools==4.44.0
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
